调整添加本地项目时的调用方法
